index.css
html, body {
    margin: 0;
}

body {
    font-family: Inter;
}

.container {
    margin: 45px 40px;
}

header {
    background: #F55A5A;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    height: 55px;
}

header > img {
    width: 24px;
    margin-right: 7px;
}

header > h1 {
    font-size: 1rem;
    font-weight: 700;
}

article.journal-entry {
    display: flex;
    margin-bottom: 36px;
}

article.journal-entry .marker {
    width: 7px;
    margin-right: 4px;
}

article.journal-entry .main-image-container {
    width: 125px;
    height: 168px;
    overflow: hidden;
    border-radius: 5px;
    flex-shrink: 0;
    margin-right: 19px;
}

article.journal-entry .main-image {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.info-container span.country {
    text-transform: uppercase;
    font-size: 0.7rem;
    margin-right: 12px;
}

.info-container a {
    color: #2B283A;
    font-size: 0.7rem;
}

.info-container a:visited {
    color: #918E9B;
}

.info-container h2.entry-title {
    margin-top: 7px;
    margin-bottom: 17px;
}

.info-container p.trip-dates {
    font-weight: bold;
}

.info-container p.entry-text {
    line-height: 1.5;
    font-size: 0.8rem;
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;  
    overflow: hidden;
}

@media (min-width: 768px) {
    .container {
        /* max-width: 800px; */
        margin: 0 auto;
        padding: 40px;
    }

    main{
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 1rem;
    }

    article {
        width: 100%;
        height: auto;
        object-fit: cover;
    }
}

